# Linxus-AiSE

./: .dockerignore  .env.example  .gitignore  Dockerfile  PHASE1_COMPLETE.md  PHASE1_VALIDATION_CHECKLIST.md  README.md  TASK_19_IMPLEMENTATION_SUMMARY.md  TASK_23_IMPLEMENTATION_SUMMARY.md  WORK_STATE_SUMMARY.md  docker-compose.yml  install.sh  pyproject.toml  validate_config.py
aise/: __init__.py
aise/agents/: __init__.py  approval.py  browser_agent.py  engineer_agent.py  graph.py  knowledge_agent.py  state.py  ticket_agent.py  tool_agent.py
aise/ai_engine/: __init__.py  anthropic_provider.py  base.py  deepseek_provider.py  local_provider.py  openai_provider.py  router.py
aise/browser_operator/: __init__.py  actions.py  browser.py  freshdesk_driver.py  zendesk_driver.py
aise/cli/: __init__.py  app.py  output.py
aise/config_ui/: __init__.py  app.py  persistence.py  validators.py
aise/core/: __init__.py  audit.py  config.py  credential_storage.py  credential_vault.py  database.py  exceptions.py  logging.py
aise/knowledge_engine/: __init__.py  chunker.py  crawler.py  embedder.py  extractor.py  init_runner.py  manager.py  metadata_store.py  sources.py  vector_store.py
aise/observability/: __init__.py  dashboard.py  langsmith.py  metrics.py  tracer.py
aise/ticket_system/: __init__.py  base.py  cleanup_job.py  email_provider.py  freshdesk.py  memory.py  processor.py  slack_provider.py  webhook_server.py  zendesk.py
aise/tool_executor/: __init__.py  allowlist.py  base.py  output_parser.py  runner.py
aise/user_style/: __init__.py  observer.py  style_embedder.py  style_injector.py
docs/: api.md  architecture.md  browser_configuration_testing.md  configuration.md  contributing.md  deployment.md  graph_orchestration.md  learn_command.md  logging.md  url_validation.md  webhook_server.md
examples/: conversation_memory_example.py  credential_storage_example.py  embedder_example.py  graph_example.py  logging_example.py
scripts/: init-db.sql  validate_phase1.sh
tests/: __init__.py  conftest.py
tests/integration/: test_cli_flow.py  test_config_ui_browser_test.py  test_config_ui_url_validation.py  (+6 more)
(+44 files in other folders)
