[tool.poetry]
name = "aise"
version = "0.1.0"
description = "AI Support Engineer System - Autonomous AI agent for cloud infrastructure support"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "aise"}]

[tool.poetry.dependencies]
python = "^3.11"
# LLM Providers
anthropic = "^0.34.0"
openai = "^1.40.0"
httpx = "^0.27.0"

# Agent Framework
langgraph = "^0.2.0"
langchain = "^0.2.0"
langchain-anthropic = "^0.1.0"
langchain-openai = "^0.1.0"

# Web Framework
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}

# CLI
typer = {extras = ["all"], version = "^0.12.0"}
rich = "^13.7.0"

# Database
asyncpg = "^0.29.0"
redis = {extras = ["hiredis"], version = "^5.0.0"}
chromadb = ">=1.0.0"

# Ticket Systems
zenpy = "^2.0.0"
aiosmtplib = "^3.0.0"
aioimaplib = "^1.1.0"
slack-sdk = "^3.31.0"

# Browser Automation
playwright = "^1.45.0"

# Documentation Processing
aiohttp = "^3.10.0"
beautifulsoup4 = "^4.12.0"
markdownify = "^0.13.0"
sentence-transformers = "^3.0.0"

# Configuration
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
python-dotenv = "^1.0.0"

# Observability
opentelemetry-api = "^1.26.0"
opentelemetry-sdk = "^1.26.0"
opentelemetry-exporter-otlp = "^1.26.0"
prometheus-client = "^0.20.0"
structlog = "^24.4.0"

# Security
cryptography = "^43.0.0"
click = "<8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
hypothesis = "^6.108.0"
black = "^24.8.0"
ruff = "^0.5.0"
mypy = "^1.11.0"

[tool.poetry.scripts]
aise = "aise.cli.app:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
